Place for home page & footer css

--- a/style.css
+++ b/style.css
@@ -62,6 +62,12 @@ ul.topmenu .vbpcart  span.vicon-shopping-cart.active:after {
     position: absolute;
 }
 
+/********* HOME PAGE *********/
+
+
+/********** FOOTER **********/
+
+
 /******** COURSE PAGE *********/
 .course_curriculum .course_lesson span {
     font-size: 13px !important;
