--- a/style.css
+++ b/style.css
@@ -197,3 +197,47 @@ ul.course_curriculum li.course_section>label {
 .course_order_details{
     margin: 30px 0;
 }
+
+
+/********** CONTACT FORM ********/
+body:not(.cf7p-message) .wpcf7-not-valid-tip {
+    position: absolute!important;
+    left: -52px !important;
+    top: -5px !important;
+    width: 44px!important;
+    height: 44px!important;
+    padding: 0!important;
+    background-color: #ED3B2E;
+    text-indent: -9999px!important;
+    padding: 0;
+    border: none!important;
+}
+.wpcf7-not-valid-tip {
+    color: #dc3232;
+    font-size: 1em;
+    font-weight: normal;
+    display: block;
+}
+body:not(.cf7p-message) .wpcf7-not-valid-tip:before {
+    content: '';
+    position: absolute;
+    right: -5px;
+    top: 10px;
+    background-color: #ed3b2e;
+    width: 11px;
+    height: 11px;
+    transform: rotate(45deg);
+}
+body:not(.cf7p-message) .wpcf7-not-valid-tip:after {
+    content: '\00d7';
+    position: absolute;
+    left: 18px;
+    top: 2px;
+    font-size: 25px;
+    color: #fff;
+    text-indent: 0;
+}
+input.wpcf7-form-control.has-spinner.wpcf7-submit.signbtn {
+    border: 1px solid white;
+}
+
